<resources>
    <string name="app_name">Cloudfile</string>
    <string name="login_label">Вход</string>
    <string name="forgot_label">Сброс пароля</string>
    <string name="register">Регистрация</string>
    <string name="confirm_btn">Подтвердить</string>
    <string name="login_btn">Войти</string>
    <string name="resetpass_btn">Забыл пароль</string>
    <string name="nickname">логин</string>
    <string name="pass">пароль</string>
    <string name="new_pass">новый пароль</string>
    <string name="login_err">Неверный логин или пароль</string>
    <string name="forgot_err">Неверный логин или ответ на контрольный вопрос</string>
    <string name="expired">Сеанс завершён на стороне сервера, переавторизуйтесь</string>
    <string name="profile_deleted">Ваш профиль удалён за нарушение правил использования</string>
    <string name="not_confirmed_err">Дождитесь одобрения авторизацией</string>
    <string name="ftp_error">Ошибка подключения к FTP-серверу. Обратитесь к администрации.</string>
    <string name="error_dialogbox_title">Ошибка</string>
    <string name="info_dialogbox_title">Примечание</string>
    <string name="reg_success">Регистрация успешна. Ожидайте одобрения администрацией (до 72 часов)</string>
    <string name="pass_success_reset">Сброс пароля успешен, старые сеансы завершены.</string>
    <string name="warn_dialogbox_title">Предупреждение</string>
    <string name="fill_all_fields">Заполните все поля!</string>
    <string name="pass_not_match">Пароли не совпадают</string>
    <string name="nickname_taken">Ник уже занят</string>
    <string name="first_last_name">имя-фамилия</string>
    <string name="confirm">подтверждение</string>
    <string name="lab_check_question">Контрольный вопрос: любимая\nкличка животного</string>
    <string name="answer">ответ</string>
    <string name="answer_full">ответ на к.в.</string>
    <string name="req_err">Debug: POST request error</string>
    <string name="youre_logged_in_as">Вы вошли как: %1$s</string>
    <string name="info_title">Информация о файле</string>
    <string name="file_name">Имя файла: %1$s</string>
    <string name="file_size">Размер: %1$s</string>
    <string name="file_timestamp">Дата изменения: %1$s</string>
    <string name="download">Скачать</string>
    <string name="move_rename">Переименовать/переместить</string>
    <string name="delete">Удалить</string>
    <string name="upload">Загрузить</string>
    <string name="first_last_name_label">Полное имя: %1$s</string>
    <string name="nickname_label">Логин: %1$s</string>
    <string name="quota_label">Всего квоты: %1$s</string>
    <string name="used_label">Занято: %1$s</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="change_data">Смена полного имени</string>
    <string name="quota_raise">Расширить место</string>
    <string name="logout">Выйти</string>
    <string name="plan1">4 ГБ-200 р/мес</string>
    <string name="plan2">8 ГБ-500 р/мес</string>
    <string name="plan3">16 ГБ-1300 р/мес</string>
    <string name="plan4">32 ГБ-3000 р/мес</string>
    <string name="buy">Купить</string>
    <string name="save">Сохранить</string>
    <string name="about">Cloudfile\nРазработан: darwin\nПо претензиям пишите:\nthesteam3005@gmail.com</string>
    <string name="success_save">Успешно сохранено!</string>
</resources>